fix: scrolling issue on mobile plots

--- a/perp-walk/www/custom.css
+++ b/perp-walk/www/custom.css
@@ -186,13 +186,14 @@ Starting with content, navbar, logo
   border-top: 0px;
   box-shadow: 4px 4px 16px rgba(0,0,0,.15);
   height: 89vh !important;
-  overflow: hidden;
+  overflow: scroll;
   background: #222d32;
 }
 
 @media screen and (min-width: 768px) {
   #tlBox {
     background: linear-gradient(to right, #314249 calc(17% + 12px), #222d32 0%);
+    overflow: hidden;
   }
 }
 
